--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
     "server": "node server",
     "start": "webpack && node server",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "scss": "node-sass --watch client/sass -o public/css"
+    "scss-watch": "node-sass --watch client/sass -o public/css",
+    "scss-compile": "node-sass client/sass -o public/css/compiled.css",
+    "prefix-css": "postcss --use autoprefixer -b 'last 5 versions' public/css/compiled.css -o public/css/style.prefix.css",
+    "compress-css": "node-sass public/css/style.prefix.css public/css/main.css --outout-style compressed",
+    "build-css": "npm-run-all scss-compile prefix-css compress-css"
   },
   "babel": {
     "presets": [
@@ -25,6 +29,11 @@
   },
   "dependencies": {
     "express": "^4.17.1",
+    "npm-run-all": "^4.1.5",
+    "postcss-cli": "^6.1.3",
+    "react-redux": "^7.1.1",
+    "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
     "superagent": "^5.1.0"
   },
   "devDependencies": {
@@ -34,6 +43,7 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
+    "autoprefixer": "^9.6.1",
     "babel": "^6.23.0",
     "babel-core": "^6.26.3",
     "babel-loader": "^8.0.6",
