--- a/package.json
+++ b/package.json
@@ -32,6 +32,8 @@
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
     "react-redux": "^7.1.1",
+    "react-reveal": "^1.2.2",
+    "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
     "superagent": "^5.1.0"
