--- a/package.json
+++ b/package.json
@@ -28,6 +28,17 @@
     ]
   },
   "dependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/register": "^7.4.4",
+    "babel": "^6.23.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^8.0.6",
+    "cors": "^2.8.5",
+    "jsdom": "^15.1.1",
     "express": "^4.17.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^6.1.3",
@@ -38,27 +49,16 @@
     "react-transition-group": "^4.3.0",
     "redux": "^4.0.4",
     "redux-thunk": "^2.3.0",
-    "superagent": "^5.1.0"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.4.5",
-    "@babel/plugin-proposal-class-properties": "^7.4.4",
-    "@babel/plugin-proposal-object-rest-spread": "^7.4.4",
-    "@babel/preset-env": "^7.4.5",
-    "@babel/preset-react": "^7.0.0",
-    "@babel/register": "^7.4.4",
-    "autoprefixer": "^9.6.1",
-    "babel": "^6.23.0",
-    "babel-core": "^6.26.3",
-    "babel-loader": "^8.0.6",
-    "cors": "^2.8.5",
-    "jsdom": "^15.1.1",
-    "node-sass": "^4.12.0",
-    "sass": "^1.22.1",
-    "sass-loader": "^7.1.0",
+    "superagent": "^5.1.0",
     "webpack": "^4.35.0",
     "webpack-cli": "^3.3.5",
     "webpack-dev-server": "^3.7.2"
+  },
+  "devDependencies": {
+    "autoprefixer": "^9.6.1",
+    "node-sass": "^4.12.0",
+    "sass": "^1.22.1",
+    "sass-loader": "^7.1.0"
   },
   "repository": {
     "type": "git",
